--- a/seller_portal/opportunities.html
+++ b/seller_portal/opportunities.html
@@ -55,6 +55,12 @@
                                 <span class="nav-text">Properties</span>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a href="property-map.html" class="nav-link">
+                                <i class="fas fa-map nav-icon"></i>
+                                <span class="nav-text">Property Map</span>
+                            </a>
+                        </li>
                         <li class="nav-item active">
                             <a href="opportunities.html" class="nav-link">
                                 <i class="fas fa-chart-line nav-icon"></i>
